jdr-generator/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: isabella-jdr
  labels:
    app: isabella-jdr
spec:
  type: ClusterIP
  selector:
    app: isabella-jdr
  ports:
    - name: http
      port: 8080
      targetPort: 8080
